# CraigslistScraper

./: .gitignore  FILTERS.md  LICENSE  MANIFEST.in  README.md  TODO.md  __init__.py  main.py  pyproject.toml  readme.txt  setup.py
craigslistscraper/: __init__.py  ad.py  domain.py  json_build.py  main.py  scraper.py  search.py  searches.py  utils.py
craigslistscraper/city_data/: cities_compile.csv  craigslist_cities_list.csv
craigslistscraper/data/: areas.json  categories.json
craigslistscraper/utils/: json_to_csv.py
examples/: example_basic.py  example_filters.py  example_multithreading.py
