[tool.poetry]
name = "craigslistscraper"
version = "1.1.1"
description = "Simple webscraper for Craigslist."
authors = ["Ryan Peters <RyanIRL@icloud.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ryanirl/craigslistscraper"
repository = "https://github.com/ryanirl/craigslistscraper"
classifiers = [  
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
include = ["LICENSE"]
packages = [{include = "craigslistscraper"}]

[tool.poetry.dependencies]
python = "^3.7"
requests = "*"
beautifulsoup4 = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


